# abcranger

./: .Rbuildignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DESCRIPTION  DataDense.cpp  DataDense.h  ForestOnline.cpp  ForestOnline.hpp  ForestOnlineClassification.cpp  ForestOnlineClassification.hpp  ForestOnlineRegression.cpp  ForestOnlineRegression.hpp  MANIFEST.in  README-ORIG.md  README.html  README.md  README.qmd  README.rst  Rcpptest.cpp  __init__.py  a.cpp  a.hpp  abcranger.cpp  build.fsx  configure  eigen-test.cpp  environment.yml  estim_param.cpp  forestclass-test.cpp  forestonlineclass-test.cpp  forestonlinereg-test.cpp  forestreg-test.cpp  lapack-test.cpp  lda-eigen-test.cpp  lda-eigen.hpp  lda-test.cpp  lda.hpp  macbuild-wheel.sh  (+19 more)
.github/workflows/: build.yml  cmake.yml  standalone.yml
R/: rabcranger.R
Rpkg/: DESCRIPTION  NAMESPACE
cmake/Modules/: FindR.cmake
eigen3-head/: CONTROL  portfile.cmake
highfive-head/: CONTROL  portfile.cmake
notebooks/: Model Choice Loop.ipynb  Population genetics Demo.ipynb  Population genetics Demo.py  Toy example MA(q).ipynb  biblio.bib  estimparam-statobs.txt  h5abc-modelchoice.py  modelchoice-loop.py
pybind11-nodep/: portfile.cmake  vcpkg.json
src/: CMakeLists.txt  DataDense.cpp  DataDense.h  DataDense.hpp  EstimParam.cpp  EstimParam.hpp  ForestOnline.cpp  ForestOnline.hpp  ForestOnlineClassification.cpp  ForestOnlineClassification.hpp  ForestOnlineRegression.cpp  ForestOnlineRegression.hpp  ModelChoice.cpp  ModelChoice.hpp  Reftable.hpp  forestQuantiles.cpp  forestQuantiles.hpp  lda-eigen.hpp  matutils.hpp  parse_parexpr.cpp  parse_parexpr.hpp  pls-eigen.hpp  pls-eigen2.hpp  readreftable.cpp  readreftable.hpp  readstatobs.hpp  threadpool.hpp  tqdm.cpp  tqdm.hpp  various.hpp
src/pyabcranger/: CMakeLists.txt  pyabcranger.cpp
src/rabcranger/: CMakeLists.txt  rabcranger.cpp
test/: CMakeLists.txt  conftest.py  csv-eigen.hpp  cxxopts-test.cpp  eigen-test.cpp  eigenrange-test.cpp  floatvectormatcher.hpp  forestclass-test.cpp  forestestimparam-ks-test.cpp  forestmodelchoice-ks-test.cpp  forestonlineclass-test.cpp  forestonlinereg-predsR.hpp  forestonlinereg-test.cpp  forestreg-test.cpp  ks-test.cpp  ks.hpp  lda-eigen-test.cpp  matutils-test.cpp  parse_parexpr-test.cpp  pls-eigen-test.cpp  pls-eigen2-test.cpp  quantile-test.cpp  readreftable-test.cpp  regex-test.cpp  statobsTest.hpp  test-error.hpp  test-pyabcranger.py  test.py  unique_cast.hpp
test/data/: error.csv  estimparam_runs.csv  gasolineXC.csv  headerRF.txt  modelchoice_runs.csv  onlineranger_out.confusion  onlineranger_out.importance  projection.csv  quantiles.csv  regression.csv  scores.csv  statobsRF.txt  statobsRF2.txt  weights.csv
test/data/newformat/: headerRF.txt  statobsRF.txt
testpy/: CMakeLists.txt  Model Choice Demo.ipynb  Model Choice Loop.ipynb  Parameter Estimation Demo.ipynb  Population genetics Demo.ipynb  Toy example MA(q).ipynb  Toy example Ma(q).ipynb  abcranger-reticulate.md  abcranger-reticulate.qmd  conftest.py  elfi_test.py  h5abc.py  pybind11_tests.cpp  pybind11_tests.h  test_eigen.cpp  test_eigen.py  testh5.py
tests/: testthat.R
tests/testthat/: test-rabcranger.R
