[build-system]
requires = ["setuptools>=40.8.0", "wheel","cmaketools","cmake >= 3.18", "ninja", "vswhere"]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014_mkl-2020.0-088"
skip = "cp27-* cp35-* pp*  *-musllinux* *-manylinux_i686 *-win32"
before-build = "rm -f {project}/build/CMakeCache.txt"
test-command = "pytest {project}/test/test-pyabcranger.py -v"
test-requires = ["pytest", "h5py"]
build-verbosity = 3

[tool.cibuildwheel.linux]
before-all = "bash presetup.sh"

[tool.cibuildwheel.windows]
before-build = "pip install cmake & del /f {project}\\build\\CMakeCache.txt"